<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity"
    android:orientation="vertical"
    android:padding="20dp">

    <EditText
        android:id="@+id/editTextTextPersonName1"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/firstname"
        android:paddingStart="10dp"
        android:background="@drawable/button2"
        android:maxLines="1"
        android:gravity="center"
        android:autofillHints=""
        android:paddingEnd="10dp"
        android:layout_marginTop="50dp"
        android:textColorHint="@color/black"
        android:textSize="15sp"/>

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/lastname"
        android:paddingStart="10dp"
        android:background="@drawable/button2"
        android:maxLines="1"
        android:layout_below="@id/editTextTextPersonName1"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:autofillHints=""
        android:paddingEnd="10dp"
        android:textColorHint="@color/black"
        android:textSize="15sp"/>

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/email"
        android:paddingStart="10dp"
        android:background="@drawable/button2"
        android:maxLines="1"
        android:layout_below="@id/editTextTextPersonName2"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:autofillHints=""
        android:paddingEnd="10dp"
        android:textColorHint="@color/black"
        android:textSize="15sp"/>

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:ems="10"
        android:inputType="phone"
        android:hint="@string/phone_number"
        android:paddingStart="10dp"
        android:background="@drawable/button2"
        android:maxLines="1"
        android:layout_below="@id/editTextTextPersonName"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:autofillHints=""
        android:paddingEnd="10dp"
        android:textColorHint="@color/black"
        android:textSize="15sp"/>

    <EditText
        android:id="@+id/editTextTextPassword1"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_below="@+id/editTextPhone"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_marginTop="20dp"
        android:hint="@string/password"
        android:background="@drawable/button2"
        android:paddingStart="10dp"
        android:maxLines="1"
        android:gravity="center"
        android:autofillHints=""
        android:paddingEnd="10dp"
        android:textColorHint="@color/black"
        android:textSize="15sp"/>

    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_below="@id/editTextTextPassword1"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_marginTop="20dp"
        android:hint="@string/confirmpassword"
        android:background="@drawable/button2"
        android:paddingStart="10dp"
        android:maxLines="1"
        android:gravity="center"
        android:autofillHints=""
        android:paddingEnd="10dp"
        android:textColorHint="@color/black"
        android:textSize="15sp"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/sign_up"
        android:layout_below="@id/editTextTextPassword2"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:background="@color/blue"
        android:gravity="center"
        android:maxLines="1"
        android:layout_marginTop="50dp"
        android:layout_centerInParent="true" />

</RelativeLayout>