<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginWithFacebookActivity"
    android:orientation="vertical"
    android:padding="20dp">


    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/username_or_email"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:background="@drawable/button2"
        android:maxLines="1"
        android:autofillHints=""
        android:layout_marginTop="50dp"
        android:textColorHint="@color/black"
        android:textSize="15sp"/>

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_below="@+id/editTextTextPersonName"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_marginTop="20dp"
        android:hint="@string/password"
        android:background="@drawable/button2"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:maxLines="1"
        android:autofillHints=""
        android:textColorHint="@color/black"
        android:textSize="15sp"/>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/log_in"
        android:layout_below="@id/editTextTextPassword"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:background="@color/blue"
        android:gravity="center"
        android:maxLines="1"
        android:layout_marginTop="40dp"
        android:layout_centerInParent="true"/>



</RelativeLayout>